--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import CartDrawer from "../components/CartDrawer.svelte";
 import AnnouncementBar from "../components/AnnouncementBar.astro";
+import {ViewTransitions} from 'astro:transitions';
 
 export interface Props {
   title: string;
@@ -22,6 +23,7 @@ const { title, description = defaultDesc } = Astro.props as Props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
     <meta name="description" content={description} />
     <style is:global>
       @import "../styles/global.css";
